Fix footer position

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,11 @@
+body{
+    position: relative;
+}
+.footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 .diplay-table{
     display: table;
 }
