--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,9 +1,21 @@
-body{
+body {
     position: relative;
 }
-.diplay-table{
+
+.diplay-table {
     display: table;
 }
-.margin-auto{
+
+.margin-auto {
     margin: auto;
+}
+
+.no-button-style {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
 }
