--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,21 +1,21 @@
-body {
-    position: relative;
+html,body {
+    font-family: 'Open Sans', serif;
 }
-
-.diplay-table {
-    display: table;
+.hero.is-info {
+    background: linear-gradient(
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+    ), url('https://unsplash.it/1200/900?random') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
-
-.margin-auto {
-    margin: auto;
+.hero .nav, .hero.is-success .nav {
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
-
-.no-button-style {
-    background: none;
-    color: inherit;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
+.hero .subtitle {
+    padding: 3rem 0;
+    line-height: 1.5;
 }
